unpackaged/main/default/objects/CS_Country_Setting__mdt/CS_Country_Setting__mdt.object-meta.xml
<CustomObject>
    <description>This setting will define what country goes to what region</description>
    <label>CS Country Setting</label>
    <pluralLabel>CS Country Settings</pluralLabel>
</CustomObject>