unpackaged/main/default/objects/CS_Country_Setting__mdt/fields/Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours__c</fullName>
    <label>Business Hours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
                <default>true</default>
                <label>US</label>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>Singapore</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Australia - EDT</fullName>
            </value>
            <value>
                <fullName>Australia - EST</fullName>
            </value>
            <value>
                <fullName>Australia - WST</fullName>
            </value>
            <value>
                <fullName>Canada - CST</fullName>
            </value>
            <value>
                <fullName>Canada - MST</fullName>
            </value>
            <value>
                <fullName>Europe - CET</fullName>
            </value>
            <value>
                <fullName>US - AST</fullName>
            </value>
            <value>
                <fullName>US - PST</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>